--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "homepage": "https://github.com/nitescumarisa/CloudComputing#readme",
   "dependencies": {
+    "@google-cloud/translate": "^6.3.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "google-books-search": "^0.3.1",
     "mysql": "^2.18.1"
   }
 }
